--- a/src/views/proyectos/projects.html
+++ b/src/views/proyectos/projects.html
@@ -72,7 +72,7 @@
           <iframe
             width="600"
             height="300"
-            src="https://youtu.be/XumFxzd10mk"
+           src="https://www.youtube.com/embed/XumFxzd10mk" frameborder="0" allowfullscreen
             title="Eco Mesa 57011 (Mesa Regulable)"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -126,15 +126,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/ka9-GgdtVsI"
-            title="Trabajando Juntos"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/ka9-GgdtVsI"
+          title="Trabajando Juntos"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -189,15 +189,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtube.com/shorts/nbW_ROdagyU"
-            title="Todos Somos Montiel"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/nbW_ROdagyU"
+          title="Todos Somos Montiel"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -245,15 +245,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/sRHkMvy09KI"
-            title="Braille/Vida"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/sRHkMvy09KI"
+          title="Braille/Vida"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -324,15 +324,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/b6EMZybt86Q"
-            title="Atril de Mesa"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/b6EMZybt86Q"
+          title="Atril de Mesa"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -381,15 +381,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/RzANUn1taks"
-            title="Dispositivo de aprendizaje"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/RzANUn1taks"
+          title="Dispositivo de aprendizaje"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -442,15 +442,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/ivkja19HXVs"
-            title="ORG-A-BONO"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/ivkja19HXVs"
+          title="ORG-A-BONO"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -500,15 +500,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/BYx3s8sYCK8"
-            title="Nueva visión"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/BYx3s8sYCK8"
+          title="Nueva visión"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -559,15 +559,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/zojPYA7YDUQ"
-            title="DOMO 12 Y La huerta Comunitaria"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/zojPYA7YDUQ"
+          title="DOMO 12 Y La huerta Comunitaria"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -623,15 +623,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/TEnAw-rDx4s"
-            title="Juguemos entre todos"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/TEnAw-rDx4s"
+          title="Juguemos entre todos"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>      
         </div>
         <div class="project__description project__reverse">
           <img
@@ -690,15 +690,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtube.com/shorts/nbW_ROdagyU"
-            title="ILUMIN-ARTE 1"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/nbW_ROdagyU"
+          title="ILUMIN-ARTE 1"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -747,15 +747,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/rjgYNsbcK8A"
-            title="ILUMIN-ARTE 2"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/rjgYNsbcK8A"
+          title="ILUMIN-ARTE 2"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -802,15 +802,15 @@
         </div>
         <div class="project__video">
           <iframe
-            width="600"
-            height="300"
-            src="https://youtu.be/uf6KJ7CYR2Y"
-            title="1,2,3... A JUGAR"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen
-            class="video"
-          ></iframe>
+          width="600"
+          height="300"
+          src="https://www.youtube.com/embed/uf6KJ7CYR2Y"
+          title="1,2,3... A JUGAR"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+          class="video"
+      ></iframe>
         </div>
         <div class="project__description project__reverse">
           <img
@@ -841,7 +841,7 @@
           </div>
         </div>
         <div class="project__datetime project__reverse">
-          <img
+
             src="../../../assets/img/calendar_logo.png"
             alt=""
             class="logo__project"
